# PyAutoConf

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  eden.ini  eden.yaml  optional_requirements.txt  pyproject.toml  release.sh  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: main.yml
autoconf/: __init__.py  ancestor.py  class_path.py  conf.py  csvable.py  dictable.py  directory_config.py  exc.py  fitsable.py  jax_wrapper.py  json_prior.py  mock_real.py  named.py  output.py  prior.py  setup_colab.py  setup_notebook.py  test_mode.py  workspace.py  xp_import.py
autoconf/json_prior/: config.py  converter.py  generate.py
autoconf/mock/: mock_real.py
autoconf/tools/: decorators.py
autoconfig/: __init__.py  conf.py
config/: general.yaml
priors/: different_project.json  json_prior.json  subconfig.json  test_autoconf.json
scripts/: convert_config.py  convert_prior_configs.py  edenise.py  generate_priors.py
test_autoconf/: conftest.py  mock.py  test_class_path.py  test_config.py  test_csvable.py  test_decorator.py  test_default.py  test_dictable.py  test_fitsable.py  test_json_prior_config.py  test_output_config.py  test_prior_json_conversion.py  test_workspace.py
test_autoconf/files/config/: embedded.yaml  general.ini  general.yaml  label.ini  label_format.ini  logging.yaml  output.yaml  visualize.ini
test_autoconf/files/config/one/: two.ini
test_autoconf/files/config/priors/: mock_real.json  test_yaml_config.json  test_yaml_config.yaml
test_autoconf/files/config/text/: label.ini  label_format.ini
test_autoconf/files/config_flip/: general.yaml
test_autoconf/files/default/: default_file.ini  embedded.yaml  general.ini  logging.yaml  one.yaml
test_autoconf/files/default/default/: other.ini
test_autoconf/files/default/text/: label.ini
test_autoconf/files/no_logging/: general.ini  label.ini  visualize.ini
test_autoconf/files/no_logging/priors/: test_model_mapper.json
test_autoconf/files/profiling/: general.ini
test_autoconf/json_prior/: test_config.py  test_conversion.py  test_generate.py  test_generation.py  test_json_config.py  test_prior_json_conversion.py  test_yaml_config.py
test_autoconf/json_prior/code/: module.py
test_autoconf/json_prior/priors/: different_project.json  json_prior.json  test_autoconf.json
test_autoconf/json_prior/source_code/subdirectory/: subconfig.py
test_autoconf/priors/: different_project.json  mock_real.json  subconfig.json
test_autoconf/test_files/config/: priors.json
test_autoconf/tools/: test_decorators.py
test_autoconf/unit/: conftest.py  test_config.py  test_default.py  test_iteration.py
test_autoconf/unit/files/config/: general.ini  label.ini  label_format.ini  non_linear.ini  visualize.ini
test_autoconf/unit/files/default/: default_file.ini  general.ini
test_autoconf/unit/json_prior/: test_config.py  test_conversion.py  test_generate.py  test_generation.py  test_json_config.py
test_autoconf/unit/json_prior/code/: module.py
test_autoconfig/: test_config.py
test_autofit/: test_config.py
test_autofit/optimize/test_fit/: .start_time
(+22 files in other folders)
