[build-system]
requires = ["setuptools>=79.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoconf"
dynamic = ["version"]
description = "PyAuto Configration"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "James Nightingale", email = "James.Nightingale@newcastle.ac.uk" },
    { name = "Richard Hayes", email = "richard@rghsoftware.co.uk" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
keywords = ["cli"]
dependencies = [
    "pathlib",
    "jaxnnls==1.0.1",
    "jax>=0.4.13,<0.5.0",
    "jaxlib>=0.4.13,<0.5.0",
    "typing-inspect>=0.4.0",
    "PyYAML>=6.0.1",
    "numpy>=1.24.0,<=2.0.1"
]

[project.urls]
Homepage = "https://github.com/rhayes777/PyAutoConf"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["docs", "test_autoconf", "test_autoconf*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
optional=["astropy>=5.0"]
test = ["pytest"]
dev = ["pytest", "black"]

[tool.pytest.ini_options]
testpaths = ["test_autoconf"]